# src/models/user.model.ts
@@ -20,8 +20,8 @@ const Schema = mongoose.Schema;
 
 const UserSchema = new Schema<User>({
   fullName       : { type: Schema.Types.String, required: true },
-  username       : { type: Schema.Types.String, required: true },
-  email          : { type: Schema.Types.String, required: true },
+  username       : { type: Schema.Types.String, required: true, unique: true },
+  email          : { type: Schema.Types.String, required: true, unique: true },
   password       : { type: Schema.Types.String, required: true },
   role           : { type: Schema.Types.String, enum: ["admin", "user"], default: "user" },
   profilePicture : { type: Schema.Types.String, default: "user.jpg" },
@@ -34,6 +34,7 @@ const UserSchema = new Schema<User>({
 UserSchema.pre("save", function(next) {
   const user = this;
   user.password = encrypt(user.password);
+  user.activationCode = encrypt(user.id);
   next();
 });
 
